# executainer

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  INSTALL.md  LICENSE  PRD.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: sample-run.md  troubleshooting.md
skills/executainer/: SKILL.md
src/: cli.rs  doctor.rs  lib.rs  main.rs  manifest.rs  prompt_builder.rs  result_parser.rs  synthesizer.rs  tmux_backend.rs
templates/: lane_read_only.txt  lane_writable.txt  synthesis.txt
tests/: cli.rs  core.rs
