[package]
name = "executainer"
version = "0.1.0"
edition = "2024"
description = "CLI-first trusted parallel delegation for terminal power users"
license = "MIT"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.12"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
